--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>
+       Tic Tac Toe
+      </title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +14,58 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <br>
+      <h1>
+      <strong>T</strong>ic
+      <strong>T</strong>ac
+      <strong>T</strong>oe
+      <strong>G</strong>ame.
+    </h1>
+    <h2>Please sign up or sign in to continue.</h2>
+    <p id="message"></p>
+    <h2>Sign Up!</h2>
+    <form id="sign-up">
+      <label> Email:</label>
+      <input name="credentials[email]" type="email">
+      <label>Password:</label>
+      <input name="credentials[password]" type="password">
+      <label>Password Confirmation:</label>
+      <input name="credentials[password_confirmation]" type="password">
+      <input type="submit" value="Sign up">
+    </form>
+    <br>
+    <form id="sign-in">
+      <h2>Log In and Play!</h2>
+      <label> Email:</label>
+      <input name="credentials[email]" type="email">
+      <label>Password:</label>
+      <input name="credentials[password]" type="password">
+      <label>Password Confirmation:</label>
+      <input name="credentials[password_confirmation]" type="password">
+      <input type="submit" value="Sign In">
+    </form>
+    <button id="sign-out">Sign Out</button>
+    <br> <br>
+    <section>
+      <button1 id="butn-x"> X </button1>
+      <p>Please choose "X" or "O"</p>
+      <button1 id="butn-o"> O </button1>
+    </section>
+    <br> <br>
+    <button id="create-game">Play Tic Tac Toe!</button>
+    <div id="board">
+        <div class="row row-cols-3">
+          <div class="col border-bottom border-end">0
+          </div>
+          <div class="col border-bottom border-end border-start">1</div>
+          <div class="col border-bottom border-start">2</div>
+          <div class="col border-bottom border-end">3</div>
+          <div class="col border-bottom border-end border-start">4</div>
+          <div class="col border-bottom border-start">5</div>
+          <div class="col border-end border-top">6</div>
+          <div class="col border-start border-top border-end">7</div>
+          <div class="col border-top border-start">8</div>
+          </div>
+          </div>
     </body>
 </html>
