--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <strong>T</strong>oe
       <strong>G</strong>ame.
     </h1>
-    <h2>Please sign up or sign in to continue.</h2>
     <p id="message"></p>
-    <h2>Sign Up!</h2>
     <form id="sign-up">
+      <h2>Please sign up or sign in to continue.</h2>
+      <h2>Sign Up!</h2>
       <label> Email:</label>
       <input name="credentials[email]" type="email">
       <label>Password:</label>
@@ -40,32 +40,40 @@
       <input name="credentials[email]" type="email">
       <label>Password:</label>
       <input name="credentials[password]" type="password">
-      <label>Password Confirmation:</label>
-      <input name="credentials[password_confirmation]" type="password">
       <input type="submit" value="Sign In">
     </form>
     <button id="sign-out">Sign Out</button>
     <br> <br>
-    <section>
-      <button1 id="butn-x"> X </button1>
-      <p>Please choose "X" or "O"</p>
-      <button1 id="butn-o"> O </button1>
-    </section>
-    <br> <br>
     <button id="create-game">Play Tic Tac Toe!</button>
+    <br> <br>
+    <section class="container">
     <div id="board">
-        <div class="row row-cols-3">
-          <div class="col border-bottom border-end">0
+      <div class = "row board">
+        <div class= "row row-cols-3">
+
+          <div class="col border-bottom border-end" data-cell-index="0"></div>
+
+          <div class ="col border-bottom border-end border-start" data-cell-index="1"></div>
+
+          <div class ="col border-bottom border-start" data-cell-index="2"></div>
+
+          <div class ="col border-bottom border-end" data-cell-index="3"></div>
+
+          <div class ="col border-bottom border-end border-start" data-cell-index="4"></div>
+
+          <div class ="col border-bottom border-start" data-cell-index="5"></div>
+
+          <div class ="col border-end border-top" data-cell-index="6"></div>
+
+          <div class ="col border-start border-top border-end" data-cell-index="7"></div>
+
+          <div class ="col border-top border-start" data-cell-index="8"></div>
           </div>
-          <div class="col border-bottom border-end border-start">1</div>
-          <div class="col border-bottom border-start">2</div>
-          <div class="col border-bottom border-end">3</div>
-          <div class="col border-bottom border-end border-start">4</div>
-          <div class="col border-bottom border-start">5</div>
-          <div class="col border-end border-top">6</div>
-          <div class="col border-start border-top border-end">7</div>
-          <div class="col border-top border-start">8</div>
           </div>
           </div>
+      </section>
+      <form>
+      <button type="submit" id= "update-game">RESTART GAME</button>
+      </form>
     </body>
 </html>
