--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
       <div class = "row board">
         <div class= "row row-cols-3">
 
-          <div class="col border-bottom border-end" data-cell-index="0"></div>
+          <div class= "cell col border-bottom border-end" data-cell-index="0"></div>
 
-          <div class ="col border-bottom border-end border-start" data-cell-index="1"></div>
+          <div class ="cell col border-bottom border-end border-start" data-cell-index="1"></div>
 
-          <div class ="col border-bottom border-start" data-cell-index="2"></div>
+          <div class ="cell col border-bottom border-start" data-cell-index="2"></div>
 
-          <div class ="col border-bottom border-end" data-cell-index="3"></div>
+          <div class ="cell ol border-bottom border-end" data-cell-index="3"></div>
 
-          <div class ="col border-bottom border-end border-start" data-cell-index="4"></div>
+          <div class ="cell col border-bottom border-end border-start" data-cell-index="4"></div>
 
-          <div class ="col border-bottom border-start" data-cell-index="5"></div>
+          <div class ="cell col border-bottom border-start" data-cell-index="5"></div>
 
-          <div class ="col border-end border-top" data-cell-index="6"></div>
+          <div class ="cell col border-end border-top" data-cell-index="6"></div>
 
-          <div class ="col border-start border-top border-end" data-cell-index="7"></div>
+          <div class ="cell col border-start border-top border-end" data-cell-index="7"></div>
 
-          <div class ="col border-top border-start" data-cell-index="8"></div>
+          <div class ="cell col border-top border-start" data-cell-index="8"></div>
           </div>
           </div>
           </div>
