game logic updated

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
     <button id="sign-out">Sign Out</button>
     <br> <br>
-    <button id="create-game">Play Tic Tac Toe!</button>
+    <form id="create-game">
+    <button type="submit">Play Tic Tac Toe!</button>
+    </form>
     <h3>T.T.T.G</h3>
     <br> <br>
     <section class="container">
